--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
+@font-face {
+  font-family: 'LexendGiga';
+  src: local('LexendGiga'),
+    url('../public/fonts/Lexend_Giga/static/LexendGiga-ExtraLight.ttf')
+    format('truetype');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'LexendGiga', 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  letter-spacing: -2px;
+  font-weight: 0;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
