--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -6,13 +6,19 @@
   gap: 18px;
   position: relative;
 
-  svg{
+  &--large{
+    width: 370px;
+    max-width: 370px;
+  }
+
+  & .icon-btn{
       position: absolute;
       top: 21px;
       right: 20px;
       width: 20px;
       height: 20px;
   }
+  
 
   &__media {
     background: $not-active;
