small fixes in OrderPage

--- a/src/scss/radio-block.scss
+++ b/src/scss/radio-block.scss
@@ -18,6 +18,11 @@
     bottom: 0;
     right: 0;
     width: 100%;
+
+    span{
+        color: $not-active-text;
+        font-size: $label;
+    }
   }
 
   &__button {
