--- a/src/scss/input.scss
+++ b/src/scss/input.scss
@@ -11,7 +11,7 @@
         display: none;
     }
 
-    width: 98%;
+    width: 100%;
     height: 50px;
     display: flex;
     justify-content: center;
@@ -19,6 +19,7 @@
     font-size: $label;
     border: 1px solid $div;
     transition: 0.2s all ease-in;
+    box-sizing: border-box;
 
     &:focus{
         outline: 1px solid $accent;
