--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -19,6 +19,14 @@
         display: flex;
         flex-direction: column;
         gap: 15px;
+
+        &--flexed{
+            flex-direction: row;
+
+            .input-container{
+                flex-grow: 1;
+            }
+        }
     }
 
     &-info{
