Minor changes. Product page markup started

--- a/src/scss/order-info.scss
+++ b/src/scss/order-info.scss
@@ -1,37 +1,36 @@
 @import './vars.scss';
 
 .order-info {
-    top: 20px;
-    position: sticky;
-    align-self: baseline;
-    padding: 15px;
+  flex-grow: 1;
+
+  &--small{
     flex-grow: 0.3;
-    border: 1px solid $not-active;
-
-    &__title{
-      font-size: $large;
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
-    ul{
-      margin-top: 15px;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-
-    &__service,
-    &__total{
-      display: flex;
-      width: 100%;
-      justify-content: space-between;
-    }
-
-    &__total{
-      margin-top: 12px;
-      padding-top: 12px;
-      border-top: 1px solid $not-active;
-      margin-bottom: 25px;
-    }
   }
+
+  &__title {
+    font-size: $large;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  ul {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  &__service,
+  &__total {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  &__total {
+    margin-top: 12px;
+    padding-top: 12px;
+    border-top: 1px solid $not-active;
+    margin-bottom: 25px;
+  }
+}
