--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -11,6 +11,25 @@
     max-width: 370px;
   }
 
+  &__product-info{
+    position: absolute;
+    bottom: 0px;
+    padding: 10px 20px;
+    width: 100%;
+    background-color: rgba($white, 0.8);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    backdrop-filter: blur(2px);
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+
+    &--active{
+      display: flex;
+    }
+  }
+
   & .icon-btn{
       position: absolute;
       top: 21px;
@@ -18,7 +37,7 @@
       width: 20px;
       height: 20px;
   }
-  
+
 
   &__media {
     background: $not-active;
@@ -45,5 +64,8 @@
         border: 2px solid rgba($color: $black, $alpha: .4);
       }
     }
+  }
+  &__button-container{
+    display: flex;
   }
 }
