added Redux RTK. Added ducks for cart and fac lists. Some minor changes

--- a/src/scss/productInCart.scss
+++ b/src/scss/productInCart.scss
@@ -5,6 +5,7 @@
     align-items: center;
     width: 100%;
     position: relative;
+    min-height: 120px;
 
     &__info-container{
         flex-grow: 1;
